--- a/Labs/Lab2/waph-najarzs.html
+++ b/Labs/Lab2/waph-najarzs.html
@@ -3,147 +3,170 @@
 <head>
     <meta charset="utf-8">
     <title>WAPH-ZaidNajar</title>
+    <!-- Add remote CSS -->
+    <link rel="stylesheet" href="https://waph-uc.github.io/style1.css">
+
+    <!-- Internal CSS -->
+    <style>
+        .button {
+            background-color: #4CAF50; /* Green */
+            border: none;
+            color: white;
+            padding: 5px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 12px;
+            margin: 4px 2px;
+            cursor: pointer;
+        }
+        .round { border-radius: 8px; }
+        #response { background-color: #ff9800; } /* Orange */
+    </style>
 </head>
 <body>
-    <div id="top">
-        <h1>Web Application Programming and Hacking</h1>
-        <h2>Front-end Web Development Lab</h2>
-        <h3>Instructor: Dr. Phu Phung</h3>
+    <div class="container wrapper">
+        <div id="top">
+            <h1>Web Application Programming and Hacking</h1>
+            <h2>Front-end Web Development Lab</h2>
+            <h3>Instructor: Dr. Phu Phung</h3>
+        </div>
+        <div class="wrapper">
+            <div id="menubar">
+                <h3>Student: Zaid Najar</h3>
+            </div>
+            <div id="main">
+                <div id="email">
+                    <div id="email" onclick="showhideEmail()">Show my email</div>
+                </div>
+
+                <div id="headshot">
+                    <img src="images.jpeg" alt="My headshot" width="50">
+                </div>
+
+                <div id="digit-clock"></div>
+                <script>
+                    function displayTime() {
+                        document.getElementById('digit-clock').innerHTML = "Current time: " + new Date();
+                    }
+                    setInterval(displayTime, 500);
+                </script>
+
+                <canvas id="analog-clock" width="150" height="150" style="background-color:#999"></canvas>
+                <script src="https://waph-uc.github.io/clock.js"></script>
+                <script>
+                    var canvas = document.getElementById("analog-clock");
+                    var ctx = canvas.getContext("2d");
+                    var radius = canvas.height / 2;
+                    ctx.translate(radius, radius);
+                    radius = radius * 0.90;
+                    setInterval(drawClock, 1000);
+
+                    function drawClock() {
+                        drawFace(ctx, radius);
+                        drawNumbers(ctx, radius);
+                        drawTime(ctx, radius);
+                    }
+                </script>
+
+                <p>A simple HTML page</p>
+                Using the <a href="https://www.w3schools.com/html">W3Schools template</a>
+
+                <hr>
+                <b>Interaction with forms</b>
+                <div>
+                    <i>Form with an HTTP GET Request</i>
+                    <form id="getForm" onsubmit="sendGetRequest(event)">
+                        Your input: <input name="data" id="getData" onkeyup="console.log('You have pressed a key')">
+                        <input type="submit" value="Submit">
+                    </form>
+                    <div id="getResponse">Response from server:</div>
+                </div>
+                
+                <div>
+                    <i>Form with an HTTP POST Request</i>
+                    <form id="postForm" onsubmit="sendPostRequest(event)">
+                        Your input: <input name="data" id="postData" onkeyup="console.log('You have pressed a key')">
+                        <input type="submit" value="Submit">
+                    </form>
+                    <div id="postResponse">Response from server:</div>
+                </div>
+
+                <hr>
+                <b>Ajax requests</b>
+                <div>
+                    <i>Ajax requests</i><br>
+                    Your input: 
+                    <input name="data" id="ajaxData" onkeypress="console.log('You have pressed a key')">
+                    <input class="button round" type="button" value="Ajax Echo" onclick="getEcho()">
+                    <div id="ajaxResponse">Response from server:</div>
+                </div>
+
+                <hr>
+                <b>Experiments with JavaScript code</b><br>
+                <i>Inlined JavaScript</i>
+                <div id="date" onclick="document.getElementById('date').innerHTML = Date()">Click here to show Date()</div>
+
+                <script src="email.js"></script>
+                <script>
+                    var shown = false;
+                    function showhideEmail() {
+                        if (shown) {
+                            document.getElementById('email').innerHTML = "Show my email";
+                            shown = false;
+                        } else {
+                            var myemail = "<a href='mailto:najarzs@ucmail.uc.edu'>najarzs@ucmail.uc.edu</a>";
+                            document.getElementById('email').innerHTML = myemail;
+                            shown = true;
+                        }
+                    }
+
+                    function sendGetRequest(event) {
+                        event.preventDefault();
+                        var xhttp = new XMLHttpRequest();
+                        var data = document.getElementById('getData').value;
+                        xhttp.onreadystatechange = function() {
+                            if (this.readyState == 4 && this.status == 200) {
+                                document.getElementById('getResponse').innerHTML = "Response from server: " + this.responseText;
+                            }
+                        };
+                        xhttp.open("GET", "echo.php?data=" + data, true);
+                        xhttp.send();
+                    }
+
+                    function sendPostRequest(event) {
+                        event.preventDefault();
+                        var xhttp = new XMLHttpRequest();
+                        var data = document.getElementById('postData').value;
+                        xhttp.onreadystatechange = function() {
+                            if (this.readyState == 4 && this.status == 200) {
+                                document.getElementById('postResponse').innerHTML = "Response from server: " + this.responseText;
+                            }
+                        };
+                        xhttp.open("POST", "echo.php", true);
+                        xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+                        xhttp.send("data=" + data);
+                    }
+
+                    function getEcho() {
+                        var input = document.getElementById("ajaxData").value;
+                        if (input.length == 0) {
+                            return;
+                        }
+                        var xhttp = new XMLHttpRequest();
+                        xhttp.onreadystatechange = function() {
+                            if (this.readyState == 4 && this.status == 200) {
+                                console.log("Received data=" + xhttp.responseText);
+                                document.getElementById("ajaxResponse").innerText = "Response from server: " + xhttp.responseText;
+                            }
+                        };
+                        xhttp.open("GET", "echo.php?data=" + input, true);
+                        xhttp.send();
+                        document.getElementById("ajaxData").value = "";
+                    }
+                </script>
+            </div>
+        </div>
     </div>
-    <div id="menubar">
-        <h3>Student: Zaid Najar</h3>
-    </div>
-
-    <div id="email">
-        <div id="email" onclick="showhideEmail()">Show my email</div>
-    </div>
-
-    <div id="headshot">
-        <img src="images.jpeg" alt="My headshot" width="50">
-    </div>
-
-    <div id="digit-clock"></div>
-    <script>
-        function displayTime() {
-            document.getElementById('digit-clock').innerHTML = "Current time: " + new Date();
-        }
-        setInterval(displayTime, 500);
-    </script>
-
-    <canvas id="analog-clock" width="150" height="150" style="background-color:#999"></canvas>
-    <script src="https://waph-uc.github.io/clock.js"></script>
-    <script>
-        var canvas = document.getElementById("analog-clock");
-        var ctx = canvas.getContext("2d");
-        var radius = canvas.height / 2;
-        ctx.translate(radius, radius);
-        radius = radius * 0.90;
-        setInterval(drawClock, 1000);
-
-        function drawClock() {
-            drawFace(ctx, radius);
-            drawNumbers(ctx, radius);
-            drawTime(ctx, radius);
-        }
-    </script>
-
-    <div id="main">
-        <p>A simple HTML page</p>
-        Using the <a href="https://www.w3schools.com/html">W3Schools template</a>
-    </div>
-
-    <hr>
-    <b>Interaction with forms</b>
-    <div>
-        <i>Form with an HTTP GET Request</i>
-        <form id="getForm" onsubmit="sendGetRequest(event)">
-            Your input: <input name="data" id="getData" onkeyup="console.log('You have pressed a key')">
-            <input type="submit" value="Submit">
-        </form>
-        <div id="getResponse">Response from server:</div>
-    </div>
-    
-    <div>
-        <i>Form with an HTTP POST Request</i>
-        <form id="postForm" onsubmit="sendPostRequest(event)">
-            Your input: <input name="data" id="postData" onkeyup="console.log('You have pressed a key')">
-            <input type="submit" value="Submit">
-        </form>
-        <div id="postResponse">Response from server:</div>
-    </div>
-
-    <hr>
-    <b>Ajax requests</b>
-    <div>
-        <i>Ajax requests</i><br>
-        Your input: 
-        <input name="data" id="ajaxData" onkeypress="console.log('You have pressed a key')">
-        <input type="button" value="Submit" onclick="getEcho()">
-        <div id="ajaxResponse">Response from server:</div>
-    </div>
-
-    <hr>
-    <b>Experiments with JavaScript code</b><br>
-    <i>Inlined JavaScript</i>
-    <div id="date" onclick="document.getElementById('date').innerHTML = Date()">Click here to show Date()</div>
-
-    <script src="email.js"></script>
-    <script>
-        var shown = false;
-        function showhideEmail() {
-            if (shown) {
-                document.getElementById('email').innerHTML = "Show my email";
-                shown = false;
-            } else {
-                var myemail = "<a href='mailto:najarzs@ucmail.uc.edu'>najarzs@ucmail.uc.edu</a>";
-                document.getElementById('email').innerHTML = myemail;
-                shown = true;
-            }
-        }
-
-        function sendGetRequest(event) {
-            event.preventDefault();
-            var xhttp = new XMLHttpRequest();
-            var data = document.getElementById('getData').value;
-            xhttp.onreadystatechange = function() {
-                if (this.readyState == 4 && this.status == 200) {
-                    document.getElementById('getResponse').innerHTML = "Response from server: " + this.responseText;
-                }
-            };
-            xhttp.open("GET", "echo.php?data=" + data, true);
-            xhttp.send();
-        }
-
-        function sendPostRequest(event) {
-            event.preventDefault();
-            var xhttp = new XMLHttpRequest();
-            var data = document.getElementById('postData').value;
-            xhttp.onreadystatechange = function() {
-                if (this.readyState == 4 && this.status == 200) {
-                    document.getElementById('postResponse').innerHTML = "Response from server: " + this.responseText;
-                }
-            };
-            xhttp.open("POST", "echo.php", true);
-            xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-            xhttp.send("data=" + data);
-        }
-
-        function getEcho() {
-            var input = document.getElementById("ajaxData").value;
-            if (input.length == 0) {
-                return;
-            }
-            var xhttp = new XMLHttpRequest();
-            xhttp.onreadystatechange = function() {
-                if (this.readyState == 4 && this.status == 200) {
-                    console.log("Received data=" + xhttp.responseText);
-                    document.getElementById("ajaxResponse").innerText = "Response from server: " + xhttp.responseText;
-                }
-            };
-            xhttp.open("GET", "echo.php?data=" + input, true);
-            xhttp.send();
-            document.getElementById("ajaxData").value = "";
-        }
-    </script>
 </body>
 </html>
