--- a/Labs/Lab2/waph-najarzs.html
+++ b/Labs/Lab2/waph-najarzs.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>WAPH-ZaidNajar</title>
-    <!-- Add remote CSS -->
     <link rel="stylesheet" href="https://waph-uc.github.io/style1.css">
 
-    <!-- Internal CSS -->
+  
     <style>
         .button {
-            background-color: #4CAF50; /* Green */
+            background-color: #4CAF50; 
             border: none;
             color: white;
             padding: 5px;
@@ -21,7 +20,7 @@
             cursor: pointer;
         }
         .round { border-radius: 8px; }
-        #response { background-color: #ff9800; } /* Orange */
+        #response { background-color: #ff9800; } 
     </style>
 </head>
 <body>
