--- a/Labs/Lab2/waph-najarzs.html
+++ b/Labs/Lab2/waph-najarzs.html
@@ -5,7 +5,6 @@
     <title>WAPH-ZaidNajar</title>
     <link rel="stylesheet" href="https://waph-uc.github.io/style1.css">
 
-  
     <style>
         .button {
             background-color: #4CAF50; 
@@ -20,8 +19,13 @@
             cursor: pointer;
         }
         .round { border-radius: 8px; }
-        #response { background-color: #ff9800; } 
+        #response, #getResponse, #postResponse, #ajaxResponse { 
+            background-color: #ff9800; 
+            padding: 5px;
+            margin-top: 10px;
+        } 
     </style>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <div class="container wrapper">
@@ -98,6 +102,8 @@
                     Your input: 
                     <input name="data" id="ajaxData" onkeypress="console.log('You have pressed a key')">
                     <input class="button round" type="button" value="Ajax Echo" onclick="getEcho()">
+                    <input class="button round" type="button" value="jQuery Ajax GET Echo" onclick="jQueryAjax()">
+                    <input class="button round" type="button" value="jQuery Ajax POST Echo" onclick="jQueryAjaxPost()">
                     <div id="ajaxResponse">Response from server:</div>
                 </div>
 
@@ -162,6 +168,24 @@
                         xhttp.open("GET", "echo.php?data=" + input, true);
                         xhttp.send();
                         document.getElementById("ajaxData").value = "";
+                    }
+
+                    function jQueryAjax() {
+                        var input = $("#ajaxData").val();
+                        if (input.length == 0) return;
+                        $.get("echo.php?data=" + input, function(result) {
+                            $("#ajaxResponse").html("Response from server: " + result);
+                        });
+                        $("#ajaxData").val("");
+                    }
+
+                    function jQueryAjaxPost() {
+                        var input = $("#ajaxData").val();
+                        if (input.length == 0) return;
+                        $.post("echo.php", { data: input }, function(result) {
+                            $("#ajaxResponse").html("Response from server: " + result);
+                        });
+                        $("#ajaxData").val("");
                     }
                 </script>
             </div>
