--- a/Labs/Lab2/waph-najarzs.html
+++ b/Labs/Lab2/waph-najarzs.html
@@ -104,6 +104,7 @@
                     <input class="button round" type="button" value="Ajax Echo" onclick="getEcho()">
                     <input class="button round" type="button" value="jQuery Ajax GET Echo" onclick="jQueryAjax()">
                     <input class="button round" type="button" value="jQuery Ajax POST Echo" onclick="jQueryAjaxPost()">
+                    <input class="button round" type="button" value="Guess Age" onclick="guessAge($('#ajaxData').val())">
                     <div id="ajaxResponse">Response from server:</div>
                 </div>
 
@@ -188,12 +189,17 @@
                         $("#ajaxData").val("");
                     }
 
-                    
                     function getJoke() {
                         $.get("https://v2.jokeapi.dev/joke/Programming?type=single", function(result) {
                             console.log("From jokeAPI: " + JSON.stringify(result));  
                             $("#jokeResponse").html(result.joke);  
                         });
+                    }
+
+                    async function guessAge(name) {
+                        const response = await fetch(`https://api.agify.io/?name=${name}`);
+                        const result = await response.json();
+                        $("#ajaxResponse").html(`Hi ${name}, your age should be ${result.age}`);
                     }
                 </script>
                 
